fix: fix alert spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -174,6 +174,9 @@ nav.menu {
 /* Alert */
 .alert.alert {
   @apply flex shadow-none px-4 py-3 border bg-transparent border-l-4 border-alert;
+  p {
+    @apply first:mt-0 last:mb-0;
+  }
 }
 
 .alert.alert--secondary::before {
